Sing proudly the tale of Lingua::tlhInganHol::yIghun!

20090530  Sat May 30 13:55:26 PDT 2009
  * Lingua::tlhInganHol::yIghun escapes its captor, Damian Conway,
    and releases itself to CPAN!