@@ -6,12 +6,11 @@ examples/misc.pl
 examples/sub.pl
 examples/unary.pl
 lib/Lingua/tlhInganHol/yIghun.pm
-Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
+META.yml
 README
 t/'ol.t
 t/00.load.t
 t/pod.t
-META.yml
 SIGNATURE    Added here by Module::Build
